Change colour scheme to a lighter shade of green

--- a/src/App.module.css
+++ b/src/App.module.css
@@ -9,7 +9,7 @@
 }
 
 .Content {
-  background-color: #289944;
+  background-color: #ABC798;
   padding: 10px;
   border-radius: 2px;
   border: 1px solid #dadadf;
