--- a/src/styles/Button.module.css
+++ b/src/styles/Button.module.css
@@ -19,6 +19,11 @@
   color: #e8e8e9;
 }
 
+.Light{
+  background-color: #dde9d6;
+  color: #1f2421;
+}
+
 .Button:hover {
   opacity: 0.8;
   border-color: transparent;
@@ -40,13 +45,6 @@
   background-color: #9ab389;
   border-color: #1f2421 !important;
   box-shadow: 0 0 0 0.2rem rgba(86, 100, 76, 0.5) important;
-}
-
-.Green,
-.GreenOutline:hover,
-.Dark:hover {
-  background-color: #44503d;
-  color: #e8e8e9;
 }
 
 /* .GreenOutline,
