--- a/src/App.module.css
+++ b/src/App.module.css
@@ -15,6 +15,10 @@
   border: 1px solid #e8e8e9;
 }
 
+.CommentContent {
+  margin-top: 20px;
+}
+
 .FillerImage {
   object-fit: contain;
   height: 100%;
