--- a/src/styles/RegisterSignInForm.module.css
+++ b/src/styles/RegisterSignInForm.module.css
@@ -14,10 +14,14 @@
 .Header {
   font-style: normal;
   font-weight: bold;
-  font-size: 16px;
+  font-size: 18px;
   text-align: center;
   letter-spacing: 0.2em;
   color: #e8e8e9;
+}
+
+.Dark {
+  color: #44503d;
 }
 
 .Link {
