--- a/src/styles/RegisterSignInForm.module.css
+++ b/src/styles/RegisterSignInForm.module.css
@@ -46,3 +46,27 @@
 .RegisterCol {
   height: 375px;
 }
+
+.OrderedList {
+  font-weight: bold;
+}
+
+.UnorderedList {
+  font-weight: normal;
+}
+
+.Rules {
+  font-weight: bold;
+  text-decoration: underline;
+}
+
+.RulesContainer {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 10px;
+}
+
+.UnderlineBold {
+  text-decoration: underline;
+  font-weight: bold;
+}
