--- a/src/styles/Button.module.css
+++ b/src/styles/Button.module.css
@@ -9,6 +9,16 @@
   min-width: 75px;
 }
 
+.BigButton {
+  align-self: center;
+  border-radius: 10px;
+  border-color: transparent;
+  padding: 10px 10px;
+  margin-left: 2px;
+  margin-right: 2px;
+  min-width: 125px;
+}
+
 .Wide {
   padding: 10px 50px;
   width: 100%;
@@ -24,24 +34,24 @@
   color: #1f2421;
 }
 
-.Button:hover {
+.Button:hover, .BigButton:hover {
   opacity: 0.8;
   border-color: transparent;
   cursor: pointer;
   background-color: #9ab389 !important;
 }
 
-.Button:hover:active {
+.Button:hover:active, .BigButton:hover:active {
   background-color: #9ab389 !important;
   border-color: #1f2421 !important;
 }
 
-.Button:active {
+.Button:active, .BigButton:active {
   background-color: #9ab389 !important;
   border-color: #1f2421 !important;
 }
 
-.Button:focus {
+.Button:focus, .BigButton:focus {
   background-color: #9ab389;
   border-color: #1f2421 !important;
   box-shadow: 0 0 0 0.2rem rgba(86, 100, 76, 0.5) important;
