--- a/src/styles/Tags.module.css
+++ b/src/styles/Tags.module.css
@@ -1,3 +1,12 @@
 .TagContainer {
     margin-top: 20px;
 }
+
+.Header {
+    text-decoration: underline;
+    font-weight: bold;
+  }
+
+.Tags {
+    text-decoration: underline;
+}
