--- a/src/styles/NavBar.module.css
+++ b/src/styles/NavBar.module.css
@@ -11,3 +11,9 @@
   text-decoration: underline;
   color: #1f2421;
 }
+
+.Brand {
+  padding-left: 10px;
+  color: #1f2421;
+  font-weight: bold;
+}
