--- a/src/styles/Button.module.css
+++ b/src/styles/Button.module.css
@@ -54,5 +54,5 @@
 .Button:focus, .BigButton:focus {
   background-color: #9ab389;
   border-color: #1f2421 !important;
-  box-shadow: 0 0 0 0.2rem rgba(86, 100, 76, 0.5) important;
+  box-shadow: 0 0 0 0.2rem rgba(86, 100, 76, 0.5) !important;
 }
